Wired Spacing Issue

--- a/2022ECE226Note/main.tex
+++ b/2022ECE226Note/main.tex
@@ -24,13 +24,13 @@
 \date{}
 
 %%%% Start Document %%%%
-\geometry{
-    letterpaper, 
-    top=1in,
-    bottom=1in,
-    inner=0.75in,
-    outer=0.75in
-}
+% \geometry{
+%     letterpaper, 
+%     top=1in,
+%     bottom=1in,
+%     inner=0.75in,
+%     outer=0.75in
+% }
 \begin{document}
 % \maketitle
 
