--- a/2022ECE226Quiz/main.tex
+++ b/2022ECE226Quiz/main.tex
@@ -11,20 +11,13 @@
 %%%% Load Format %%%%
 \input{../Formats/format.tex}
 \input{../Formats/Macro.tex}
-
+% \allowpagebreaks
 %%%% Document Information %%%%
 \title{In-Recitation Quiz (Cover Pset8)}
 \author{}
 \date{}
 
 %%%% Start Document %%%%
-\geometry{
-    letterpaper, 
-    top=1in,
-    bottom=1in,
-    inner=0.75in,
-    outer=0.75in
-}
 \begin{document}
 \maketitle
 
@@ -44,10 +37,10 @@ NetID:\@ \myrule\hfill RUID:\@ \myrule\\
         }
 \end{center}
 
-\input{collection/Pset8-2.tex}
+\input{collection/Pset8.tex}
 
 \begin{stretchbox}
-    Answers: \hfill
+    Answers: %\hfill
 \end{stretchbox}
 
 \end{document}
