Seems local issue

--- a/Formats/Format.tex
+++ b/Formats/Format.tex
@@ -89,10 +89,8 @@
     colback=white,
     colframe=black,
 % Title formatting
-    title={
-        #1 \hspace*{0.5\paperwidth} Grade:
-    },
-    fonttitle=\large\bfseries
+    fonttitle=\large\bfseries,
+    title={#1 \hfill Grade:\hspace*{0.15\paperwidth}},
 }
 
 %%%% Problem Environment 
@@ -101,9 +99,9 @@
 % }
 % {
 %     % 
-%     \tcblower
-%     \centering
-%     \textit{\scriptsize\bfseries Faculty Comments}
+%     % \tcblower
+%     % \centering
+%     % \textit{\scriptsize\bfseries Faculty Comments}
 %     \end{prob}
 % }
 
