Stupid Spacing Issue

--- a/Formats/Format.tex
+++ b/Formats/Format.tex
@@ -90,7 +90,7 @@
     colframe=black,
 % Title formatting
     fonttitle=\large\bfseries,
-    title={#1 \hfill Grade:\hspace*{0.15\paperwidth}},
+    title={#1 \hfill Grade:\hspace*{0.15\paperwidth}\!}, %\! works as a placeholder 
 }
 
 %%%% Problem Environment 
