Trailing Space Remove and Year Correction

--- a/Formats/Format.tex
+++ b/Formats/Format.tex
@@ -32,9 +32,9 @@
 \RequirePackage[svgnames]{xcolor} %Must load before tcolorbox
 \RequirePackage[breakable]{tcolorbox} %Customized Box
 \tcbuselibrary{skins}
-\RequirePackage{transparent} 
+\RequirePackage{transparent}
 
-%%%% Table and List 
+%%%% Table and List
 \RequirePackage{tabularx} %Better Table
 \RequirePackage{multirow}
 \RequirePackage{colortbl}
@@ -90,15 +90,15 @@
     colframe=black,
 % Title formatting
     fonttitle=\large\bfseries,
-    title={#1 \hfill Grade:\hspace*{0.15\paperwidth}\!}, %\! works as a placeholder 
+    title={#1 \hfill Grade:\hspace*{0.15\paperwidth}\ }, %\! works as a placeholder
 }
 
-%%%% Problem Environment 
+%%%% Problem Environment
 % \newenvironment{problem}[1]{
 %     \begin{prob}{#1}
 % }
 % {
-%     % 
+%     %
 %     % \tcblower
 %     % \centering
 %     % \textit{\scriptsize\bfseries Faculty Comments}
