--- a/2023ECE226Quiz/main.tex
+++ b/2023ECE226Quiz/main.tex
@@ -2,11 +2,11 @@
 
 %%%% Header and Foot Information %%%%
 \newcommand{\lefthead}{ECE 14:332:226}
-\newcommand{\centerhead}{\textbf{Probability And Random Processes}}                 
+\newcommand{\centerhead}{\textbf{Probability And Random Processes}}
 \newcommand{\righthead}{Spring 2023}
-\newcommand{\leftbottom}{TA:\@ Kailong Wang}   
+\newcommand{\leftbottom}{TA:\ Kailong Wang}
 \newcommand{\centerbottom}{\thepage}
-\newcommand{\rightbottom}{kailong.wang@outlook.com}        
+\newcommand{\rightbottom}{kailong.wang@outlook.com}
 
 %%%% Load Format %%%%
 \input{../Formats/format.tex}
@@ -22,8 +22,8 @@
 \maketitle
 
 \noindent
-Name: \myrule\hfill Signature: \myrule\\
-NetID:\@ \myrule\hfill RUID:\@ \myrule\\
+Name:\ \myrule\hfill Signature:\ \myrule\\
+NetID:\ \myrule\hfill RUID:\ \myrule\\
 \begin{center}
     \fbox{
         \begin{minipage}{0.8\textwidth}
