Matrix Transpose now has a nice macro

--- a/2023ECE226Note/main.tex
+++ b/2023ECE226Note/main.tex
@@ -1,4 +1,5 @@
 \documentclass[10pt]{report}
+\usepackage[letterpaper, margin=0.75in]{geometry}
 
 %%%% Header and Foot Information %%%%
 \newcommand{\lefthead}{ECE 14:332:226}
