--- a/Formats/Macro.tex
+++ b/Formats/Macro.tex
@@ -32,7 +32,8 @@
 %%%% vector font
 \let\oldvec\vec
 \renewcommand*{\vec}[1]{\mathbf{#1}}
-\newcommand*{\trn}{{}^{\mkern-4mu\intercal}}
+\newcommand*{\trn}{{}^{\!\intercal\!}}
+% \newcommand*{\trn}{{}^{\!\mathsf{T}}\!}
 \newcommand*{\inv}{^{-1}}
 
 %%%% number systems
@@ -48,6 +49,8 @@
 \newcommand*{\Cov}{\mathop{\textnormal{Cov}}}
 \newcommand*{\Corr}{\mathop{\textnormal{Corr}}}
 \newcommand*{\MSE}{\mathop{\textnormal{MSE}}}
+\newcommand*{\MSD}{\mathop{\textnormal{MSD}}}
+\newcommand*{\NSD}{\mathop{\textnormal{NSD}}}
 
 \newcommand*{\E}[1]{\mathbb{E}\bracks*{#1}}
 \newcommand*{\condE}[2]{\mathbb{E}\bracks*{#1 \mid #2}}
