--- a/2023ECE525Project/main.tex
+++ b/2023ECE525Project/main.tex
@@ -140,7 +140,7 @@ We can select the combination of any two elements at once and incorporates the r
 \end{equation}
 Or in a one-layer schemes
 \begin{equation}
-    y(n)=\sum_{k=1}^{K-1}\lambda_k(n)y_k(n)+\bracks*{1-\sum_{k=1}^{K-1}\lambda_k(n)}y_K(n).
+    y(n)=\sum_{k=1}^{K-1}\lambda_k(n)y_k(n)+\bracks*{1-\sum_{k=1}^{K-1}\lambda_k(n)}y_k(n).
 \end{equation}
 One useful characteristic of hierarchical schemes is its ability to selects the best combination parameters of both competing models.
 
